convert background img & fix img shift when opening menu

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,14 @@
 
 html,
 body {
-	background-image: url(../public/welcome_page/background_img.svg);
+	font-family: "Montserrat";
+}
+
+#root {
+	background-image: url(../public/welcome_page/background_img.webp);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	font-family: "Montserrat";
 }
 
 a {
